--- a/_config.yml
+++ b/_config.yml
@@ -9,13 +9,13 @@ pygments: true
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
 #
-title : Jekyll Bootstrap
-tagline: Site Tagline
+title : FRNK
+tagline: it's easy 
 author :
   name : Franco Fallica
   email : franco.fallica@gmail.com
   github : hanken
-  twitter : username
+  twitter : 
   feedburner : feedname
 
 # The production_url is only used when full-domain names are needed
