--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,8 @@ author :
   github : hanken
   twitter : francenhanken
   feedname : frnk
-  intro : bla bli blo
+  intro : "<p>Hi, I am <a href='/about.html'><strong>franco</strong></a> and this is my blog.<br />If you like it, you might want to</p>" 
+	
 
 # The production_url is only used when full-domain names are needed
 # such as sitemap.txt 
