--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ theme:
   site_name: FRNK
 
   # Google analytics UID
-  google_analytics_uid: 
+  google_analytics_uid: UA-35720510-1
 
   # Disqus shortname, for comments
   disqus_shortname: frnk-blog
